# shade-studio

./: .env.example  .gitignore  .vercelignore  README.md  next.config.ts  package-lock.json  package.json  sentry.client.config.ts  tsconfig.json  vercel.json  vitest.config.ts  vitest.setup.ts
.github/workflows/: contracts.yml  deploy.yml  test.yml
contracts/async-ai-processor/: Cargo.toml  build.sh  deploy.sh
contracts/async-ai-processor/src/: errors.rs  events.rs  lib.rs  storage.rs  types.rs
contracts/grant-registry/: Cargo.toml  build.sh  deploy.sh
contracts/grant-registry/src/: errors.rs  events.rs  lib.rs  storage.rs  types.rs
contracts/shade-agent-registry/: Cargo.toml  build.sh  deploy.sh  seed-templates.sh
contracts/shade-agent-registry/src/: errors.rs  events.rs  lib.rs  storage.rs  types.rs
contracts/zk-verifier/: .gitkeep  Cargo.toml  build.sh  deploy.sh
contracts/zk-verifier/examples/: generate_fixtures.rs
contracts/zk-verifier/src/: errors.rs  events.rs  lib.rs  storage.rs  types.rs  verifier.rs
contracts/zk-verifier/tests/: integration.rs  sandbox.rs
e2e/: credentials.spec.ts  documents.spec.ts
e2e/fixtures/: test-wallet.ts
public/: demo-proof.json
public/circuits/: .gitkeep  grant-track-record.vkey.json  team-attestation.vkey.json  verified-builder.vkey.json
scripts/: async-ai-worker.ts  compile-circuits.sh  deploy-contracts.sh  e2e-test-contracts.sh  export-verifier.sh  generate-artifact-hashes.sh  generate-demo-proof.mjs  rollback.sh  trusted-setup.sh  upgrade-contract.sh
scripts/fixtures/: zk-invalid-proof-args.json  zk-set-vk-args.json  zk-square-circuit.json  zk-valid-proof-args.json  zk-valid-view-args.json
src/: instrumentation.ts
src/app/: global-error.tsx  globals.css  layout.tsx  loading.tsx  not-found.tsx  page.tsx
src/circuits/: grant-track-record.circom  team-attestation.circom  verified-builder.circom
src/hooks/: use-ai-chat.ts  use-async-ai-job.ts  use-attestation-enhanced.ts  use-attestation.ts  use-briefing.ts  use-chain-signature.ts  use-competitive.ts  use-credentials.ts  use-data-sovereignty.ts  use-decisions.ts  use-documents.ts  use-encryption.ts  use-grant-registry.ts  use-ipfs.ts  use-meetings.ts  use-mounted.ts  use-project-account.ts  use-projects.ts  use-proposal-ai.ts  use-proposals.ts  use-shade-agent.ts  use-synthesis.ts  use-wallet-events.ts  use-wallet.ts  useZKProof.ts
src/lib/: config.ts  constants.ts  logger.ts
src/stores/: .gitkeep  agent-store.ts  ai-store.ts  async-ai-store.ts  auth-store.ts  chain-signatures-store.ts  competitive-store.ts  credential-store.ts  data-sovereignty-store.ts  decision-store.ts  document-store.ts  encryption-store.ts  grant-registry-store.ts  intelligence-store.ts  meeting-store.ts  project-accounts-store.ts  projects-store.ts  proof-store.ts  proposal-store.ts  synthesis-store.ts
src/test/: index.ts
src/types/: agents.ts  ai.ts  async-ai.ts  attestation.ts  chain-signatures.ts  circomlibjs.d.ts  credentials.ts  data-sovereignty.ts  document.ts  grants.ts  index.ts  intelligence.ts  project-accounts.ts  zk.ts  (+3 more)
(+336 files in other folders)
