[package]
name = "zk-verifier"
version = "0.1.0"
edition = "2021"
authors = ["Shade Studio"]
description = "ZK Groth16 proof verifier and credential storage for NEAR"

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
near-sdk = "5.24"
ark-bn254 = "0.5"
ark-groth16 = "0.5"
ark-ec = "0.5"
ark-ff = "0.5"
ark-serialize = { version = "0.5", features = ["derive"] }
hex = "0.4"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
borsh = { version = "1", features = ["derive"] }

[dev-dependencies]
near-sdk = { version = "5.24", features = ["unit-testing"] }
ark-relations = "0.5"
ark-snark = "0.5"
ark-std = "0.5"
ark-groth16 = { version = "0.5", features = ["default"] }
# near-workspaces and tokio are needed for sandbox tests (tests/sandbox.rs).
# Uncomment to run: cargo test --test sandbox --features sandbox
# near-workspaces = "0.14"
# tokio = { version = "1", features = ["full"] }

[profile.release]
opt-level = "z"
lto = true
panic = "abort"
codegen-units = 1
overflow-checks = true
